✨[feat]  카카오 로그인 취소 로직 구현

--- a/MangoPlateCloneApp/MangoPlateCloneApp/Info.plist
+++ b/MangoPlateCloneApp/MangoPlateCloneApp/Info.plist
@@ -13,6 +13,16 @@
 			<array>
 				<string>naverlogin</string>
 			</array>
+            
+            <key>LSApplicationQueriesSchemes</key>
+              <array>
+                <string>naversearchapp</string>
+                <string>naversearchthirdlogin</string>
+                <!-- 카카오톡으로 로그인 -->
+                    <string>kakaokompassauth</string>
+                    <!-- 카카오톡 공유 -->
+                    <string>kakaolink</string>
+              </array>
 		</dict>
 		<dict>
 			<key>CFBundleTypeRole</key>
