✨[feat]  : 구글 로그인 추가

--- a/MangoPlateCloneApp/Podfile
+++ b/MangoPlateCloneApp/Podfile
@@ -21,5 +21,8 @@ target 'MangoPlateCloneApp' do
     pod 'KakaoSDKAuth'
     pod 'KakaoSDKUser' 
     pod 'KakaoSDKNavi'
-    pod 'naveridlogin-sdk-ios'
+    pod 'Firebase/Auth'
+    pod 'GoogleSignIn'
+    pod 'FirebaseAuth'
+    pod 'FirebaseFirestore'
 end
