✨[feat]  :  콜렉션 뷰 ui 구현 및 로그아웃 구현

--- a/MangoPlateCloneApp/Podfile
+++ b/MangoPlateCloneApp/Podfile
@@ -25,4 +25,5 @@ target 'MangoPlateCloneApp' do
     pod 'GoogleSignIn'
     pod 'FirebaseAuth'
     pod 'FirebaseFirestore'
+    pod 'ImageSlideshow', '~> 1.9.0'
 end
